--- a/index.html
+++ b/index.html
@@ -26,14 +26,25 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your             browser</a> to improve your experience.</p>
         <![endif]-->
-
-      <footer>
-        <p>&copy; Vaishak Salin 2014</p>
-      </footer>
+        <article id="about">
+            <img id="dp" src="https://avatars0.githubusercontent.com/u/1407483" height="250" />
+            <h1>Vaishak Salin</h1>
+            <h2>Manipal Institute of Technology</h2>
+        </article>
+        <article id="projects">
+            <h2>Just a few projects that I've worked on.</h2>
+        </article>
+        <article id="contact">
+            <h2>Say hello!</h2>
+        </article>
+        <footer>
+            <p>&copy; Vaishak Salin 2014</p>
+        </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script type="text/javascript"  src='http://cdn.renderedfont.com/js/renderedfont-0.8.min.js#free'></script>
 
         <script src="js/main.js"></script>
 
