--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script type="text/javascript" src="js/vendor/jquery.stellar.min.js"></script>
+        <script type="text/javascript" src="js/vendor/waypoints.min.js"></script>
+        <script type="text/javascript" src="js/vendor/jquery.easing.1.3.js"></script>  
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -44,7 +47,6 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script type="text/javascript"  src='http://cdn.renderedfont.com/js/renderedfont-0.8.min.js#free'></script>
 
         <script src="js/main.js"></script>
 
