Added bootstrap css, modified 404, added social links

--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
 	        <div class="wrapper">  
 	            <article id="contact">
 	                <h2>Say hello!</h2>
+                    <div id="social">
+                        <a href="http://www.facebook.com/vaishaks" target="_blank">
+                            <img class="social-ico" src="img/Facebook.svg" alt="Facebook" height="100" />
+                        </a>
+                        <a href="mailto:vaishak93@gmail.com">
+                            <img class="social-ico" src="img/Gmail.svg" alt="Gmail" height="100" />
+                        </a>                    
+                        <a href="http://in.linkedin.com/in/vaishaks" target="_blank">
+                            <img class="social-ico" src="img/Linked%20in.svg" alt="LinkedIn" height="100" />
+                        </a>                        
+                        <a href="https://github.com/vaishaks" target="_blank">
+                            <img class="social-ico" src="img/Github.svg" alt="Github" height="100" />
+                        </a>
+                        <a href="https://twitter.com/vaishaks" target="_blank">
+                            <img class="social-ico" src="img/Twitter.svg" alt="Twitter" height="100" />
+                        </a>                        
+                    </div>
 	            </article>		
 	        </div>
 		</div><!--End Slide 3-->
