--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+		<script type="text/javascript" src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/jquery.stellar.min.js"></script>
 		<script type="text/javascript" src="js/waypoints.min.js"></script>
