Added project page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 				<article id="about">                        
 		                <img id="dp" src="https://avatars0.githubusercontent.com/u/1407483" height="250" />
 		                <h1>Vaishak Salin</h1>
-		                <h2>Manipal Institute of Technology</h2>
+		                <h2>
+                            Hello World!<br/>I'm an undergraduate Computer Science student at Manipal Institute of Technology. I'm passionate                             about Machine Learning, Bio-Informatics and Web Technologies.
+                        </h2>
 		        </article>
 	        </div>
 			<a class="button" data-slide="2" title=""></a>
@@ -47,6 +49,35 @@
 			<div class="wrapper">
 		        <article id="projects">
 		            <h2>Just a few projects that I've worked on.</h2>
+                    <div id="project-wrap">
+                        <div class="proj-box">
+                            <img class="proj-img" src="http://dummyimage.com/300x200/0094a8/fff.jpg" alt="Project Image" height="150" width="200"/>     
+                            <div class="summary">
+                                <h3>Project Title</h3>
+                                <p>
+                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dui vehicula urna posuere, sit                                      amet bibendum tellus egestas. Etiam congue eros id gravida malesuada. Curabitur non volutpat leo. Praesent                                    rutrum porttitor diam, sit amet cursus felis imperdiet id. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="proj-box">
+                            <img class="proj-img" src="http://dummyimage.com/300x200/0094a8/fff.jpg" alt="Project Image" height="150" width="200"/>     
+                            <div class="summary">
+                                <h3>Project Title</h3>
+                                <p>
+                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dui vehicula urna posuere, sit                                      amet bibendum tellus egestas. Etiam congue eros id gravida malesuada. Curabitur non volutpat leo. Praesent                                    rutrum porttitor diam, sit amet cursus felis imperdiet id.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="proj-box">
+                            <img class="proj-img" src="http://dummyimage.com/300x200/0094a8/fff.jpg" alt="Project Image" height="150" width="200"/>     
+                            <div class="summary">
+                                <h3>Project Title</h3>
+                                <p>
+                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dui vehicula urna posuere, sit                                      amet bibendum tellus egestas. Etiam congue eros id gravida malesuada. Curabitur non volutpat leo. Praesent                                    rutrum porttitor diam, sit amet cursus felis imperdiet id.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 		        </article>
 	       	</div>
 			<a class="button" data-slide="3" title=""></a>
