Added projects and resume icon

--- a/index.html
+++ b/index.html
@@ -51,29 +51,29 @@
 		            <h2>Just a few projects that I've worked on.</h2>
                     <div id="project-wrap">
                         <div class="proj-box">
-                            <img class="proj-img" src="http://dummyimage.com/300x200/0094a8/fff.jpg" alt="Project Image" height="150" width="200"/>     
+                            <img class="proj-img" src="img/proteome.jpg" alt="Peptide Status Detection" height="150" width="200"/>     
                             <div class="summary">
-                                <h3>Project Title</h3>
+                                <h3>Peptide Status Detection</h3>
                                 <p>
-                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dui vehicula urna posuere, sit                                      amet bibendum tellus egestas. Etiam congue eros id gravida malesuada. Curabitur non volutpat leo. Praesent                                    rutrum porttitor diam, sit amet cursus felis imperdiet id. 
+                                    A bio-informatics and machine learning project for which we've coded a classifier in python to attempt to                                     classify n length peptides as amyloidogenic or non-amyloidogenic. This could help in sequence targeted                                       drug discovery for neurodegenerative disorders like Alzhiemers or Parkinsons. 
                                 </p>
                             </div>
                         </div>
                         <div class="proj-box">
-                            <img class="proj-img" src="http://dummyimage.com/300x200/0094a8/fff.jpg" alt="Project Image" height="150" width="200"/>     
+                            <img class="proj-img" src="img/bunkmate.png" alt="BunkMate logo" height="150" width="200"/>     
                             <div class="summary">
-                                <h3>Project Title</h3>
+                                <h3>BunkMate</h3>
                                 <p>
-                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dui vehicula urna posuere, sit                                      amet bibendum tellus egestas. Etiam congue eros id gravida malesuada. Curabitur non volutpat leo. Praesent                                    rutrum porttitor diam, sit amet cursus felis imperdiet id.
+                                    A friendly windows phone app to keep track of your attendance in school or college. You can add all your                                     subjects and keep track your bunks. The app includes a live tile for easy monitoring of your bunks.
                                 </p>
                             </div>
                         </div>
                         <div class="proj-box">
-                            <img class="proj-img" src="http://dummyimage.com/300x200/0094a8/fff.jpg" alt="Project Image" height="150" width="200"/>     
+                            <img class="proj-img" src="img/craigslist.png" alt="Craigslist" height="150" width="200"/>     
                             <div class="summary">
-                                <h3>Project Title</h3>
+                                <h3>Craigslist Category Classification</h3>
                                 <p>
-                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam commodo dui vehicula urna posuere, sit                                      amet bibendum tellus egestas. Etiam congue eros id gravida malesuada. Curabitur non volutpat leo. Praesent                                    rutrum porttitor diam, sit amet cursus felis imperdiet id.
+                                    Craigslist is a prevalent platform for local classiﬁed advertisements. We've coded a model that predicts                                     the category under which a Craigslist post must be listed using Support Vector Machines, a supervised                                         machine learning algorithm.
                                 </p>
                             </div>
                         </div>
@@ -89,21 +89,31 @@
 	            <article id="contact">
 	                <h2>Say hello!</h2>
                     <div id="social">
-                        <a href="http://www.facebook.com/vaishaks" target="_blank">
-                            <img class="social-ico" src="img/Facebook.svg" alt="Facebook" height="100" />
-                        </a>
-                        <a href="mailto:vaishak93@gmail.com">
-                            <img class="social-ico" src="img/Gmail.svg" alt="Gmail" height="100" />
-                        </a>                    
-                        <a href="http://in.linkedin.com/in/vaishaks" target="_blank">
-                            <img class="social-ico" src="img/Linked%20in.svg" alt="LinkedIn" height="100" />
-                        </a>                        
-                        <a href="https://github.com/vaishaks" target="_blank">
-                            <img class="social-ico" src="img/Github.svg" alt="Github" height="100" />
-                        </a>
-                        <a href="https://twitter.com/vaishaks" target="_blank">
-                            <img class="social-ico" src="img/Twitter.svg" alt="Twitter" height="100" />
-                        </a>                        
+                        <center>
+                            <a href="http://www.facebook.com/vaishaks" target="_blank">
+                                <img class="social-ico" src="img/Facebook.svg" alt="Facebook" height="100" />
+                            </a>
+                            <a href="mailto:vaishak93@gmail.com">
+                                <img class="social-ico" src="img/Gmail.svg" alt="Gmail" height="100" />
+                            </a>                    
+                            <a href="http://in.linkedin.com/in/vaishaks" target="_blank">
+                                <img class="social-ico" src="img/Linked%20in.svg" alt="LinkedIn" height="100" />
+                            </a>                        
+                            <a href="https://github.com/vaishaks" target="_blank">
+                                <img class="social-ico" src="img/Github.svg" alt="Github" height="100" />
+                            </a>
+                            <a href="https://twitter.com/vaishaks" target="_blank">
+                                <img class="social-ico" src="img/Twitter.svg" alt="Twitter" height="100" />
+                            </a>     
+                        </center>
+                    </div>
+                    <div id="resume">
+                        <div id="resume-ico">
+                            <center>
+                                <img src="img/Resume.svg" alt="Resume" height="100" />
+                                <h3>Detailed Resume</h3>
+                            </center>
+                        </div>
                     </div>
 	            </article>		
 	        </div>
