--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">	
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/bootstrap-responsive.css">
 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -26,21 +27,21 @@
 		<!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your             browser</a> to improve your experience.</p>
         <![endif]-->
-		<ul class="navigation">
+		<ul class="navigation navbar-fixed-left">
 			<li data-slide="1">About</li>
 			<li data-slide="2">Projects</li>
 			<li data-slide="3">Contact</li>
 		</ul>	
 		<div class="slide" data-slide="1" data-stellar-background-ratio="0.5">
-			<div class="wrapper">
-				<article id="about">                        
-		                <img id="dp" src="https://avatars0.githubusercontent.com/u/1407483" height="250" />
-		                <h1>Vaishak Salin</h1>
-		                <h2>
-                            Hello World!<br/>I'm an undergraduate Computer Science student at Manipal Institute of Technology. I'm passionate                             about Machine Learning, Bio-Informatics and Web Technologies.
-                        </h2>
-		        </article>
-	        </div>
+            <article id="about" class="container">      
+                <div class="row-fluid">
+                    <img id="dp" src="https://avatars0.githubusercontent.com/u/1407483" height="250" />
+                    <h1>Vaishak Salin</h1>
+                    <h2>
+                        Hello World!<br/>I'm an undergraduate Computer Science student at Manipal Institute of Technology. I'm passionate                             about Machine Learning, Bio-Informatics and Web Technologies.
+                    </h2>
+                </div>
+            </article>
 			<a class="button" data-slide="2" title=""></a>
 			<span class="slideno">About</span>
 		</div><!--End Slide 1-->
