Added resume permalink

--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
                     <div id="resume">
                         <div id="resume-ico">
                             <center>
-                                <img src="img/Resume.svg" alt="Resume" height="100" />
-                                <h3>Detailed Resume</h3>
+                                <a href="https://github.com/vaishaks/latex-cv/raw/master/vaishak_cv.pdf" target="_blank">
+                                    <img src="img/Resume.svg" alt="Resume" height="100" />  
+                                    <h3>Detailed Resume</h3>
+                                </a>
                             </center>
                         </div>
                     </div>
