--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
                     </div>
 	            </article>		
 	        </div>
+            <a id="go-up" class="button" data-slide="1" title=""></a>   
+            <small id="go-up-txt">GO BACK TO TOP</small>
 		</div><!--End Slide 3-->
 
 	    <footer>
