Fixed go back positioning

--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
                     </div>
 	            </article>		
 	        </div>
-            <a id="go-up" class="button" data-slide="1" title=""></a>   
-            <small id="go-up-txt">GO BACK TO TOP</small>
+            <div id="go-up-container">
+                <a id="go-up" class="button" data-slide="1" title=""></a>   
+                <small id="go-up-txt">GO BACK TO TOP</small>
+            </div>
 		</div><!--End Slide 3-->
 
 	    <footer>
